# usyslog

./: .gitignore  Makefile.am  README.md  configure.ac  klogd.c  logfile.c  mksock.c  proto.c  protomap.c  syslog.1  syslog.c  syslogd.c  syslogd.h
